@@ -1,3 +1,13 @@
+2018-05-16  Tom Tromey  <tom@tromey.com>
+
+	* symfile.c (symbol_file_add_with_addrs, symbol_file_clear)
+	(separate_debug_file_exists, find_separate_debug_file)
+	(add_symbol_file_command, reread_symbols, allocate_symtab)
+	(allocate_compunit_symtab): Use filtered printing, not
+	unfiltered.
+	* psymtab.c (require_partial_symbols, dump_psymtab)
+	(allocate_psymtab): Use filtered printing, not unfiltered.
+
 2018-05-27  Tom Tromey  <tom@tromey.com>
 
 	* complaints.c (complaint_internal): Correctly check complaint
